classDiagram
    %% Domain Models
    class GitHubRepository {
        +Guid Id
        +string Owner
        +string Name
        +string CloneUrl
        +DateTime LastAnalyzedCommitDate
        +string GetFullName()
        +string GetLocalPath()
    }

    class CommitLineCount {
        +Guid Id
        +Guid RepositoryId
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +int GetNetLines()
        +bool HasFileType(string extension)
    }

    %% Application DTOs
    class CommitStatsDto {
        +string Sha
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +Dictionary~string, int~ LinesByFileType
        +string CommitMessage
        +string AuthorName
        +string AuthorEmail
    }

    class DailyLineCountDto {
        +DateTime Date
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +int NetLines
        +int CommitCount
        +Dictionary~string, int~ LinesByFileType
    }

    class GitHubRepoStatsDto {
        +GitHubRepository Repository
        +int CommitCount
        +List~CommitLineCount~ CommitLineCounts
        +Dictionary~string, int~ LineCounts
        +int GetTotalLinesOfCode()
        +DateTime GetLastCommitDate()
    }

    class RepositoryLineCountHistoryDto {
        +Guid RepositoryId
        +string RepositoryName
        +string Owner
        +IEnumerable~DailyLineCountDto~ DailyLineCounts
        +string GetFullRepositoryName()
        +int GetTotalDays()
    }

    %% Infrastructure Entities
    class GitHubRepositoryEntity {
        +string PartitionKey
        +string RowKey
        +DateTimeOffset? Timestamp
        +ETag ETag
        +Guid Id
        +string Owner
        +string Name
        +string CloneUrl
        +DateTime LastAnalyzedCommitDate
        +GitHubRepository ToDomainModel()
        +GitHubRepositoryEntity FromDomainModel(GitHubRepository)$
    }

    class CommitLineCountEntity {
        +string PartitionKey
        +string RowKey
        +DateTimeOffset? Timestamp
        +ETag ETag
        +Guid Id
        +Guid RepositoryId
        +string CommitSha
        +DateTime CommitDate
        +int TotalLines
        +int LinesAdded
        +int LinesRemoved
        +string LinesByFileTypeJson
        +CommitLineCount ToDomainModel()
        +CommitLineCountEntity FromDomainModel(CommitLineCount)$
    }

    %% Client Models
    class RepositoryPageState {
        +string NewRepoCloneUrl
        +string AddRepoMessage
        +string ErrorMessage
        +bool IsLoadingRepositories
        +bool IsAddingRepository
        +string ProgressMessage
        +int ProgressPercentage
        +List~GitHubRepository~ Repositories
        +HashSet~Guid~ ShowAllCommitsFor
        +void ClearMessages()
        +void SetProgress(string, int)
    }

    class RepositoryAnalysisResult {
        +Guid RepositoryId
        +string RepositoryName
        +List~CommitLineCount~ Commits
        +int GetTotalCommits()
        +DateTime GetLatestCommitDate()
    }

    %% Interfaces
    class IGitHubService {
        <<interface>>
        +Task~string~ CloneRepositoryAsync(string, string)
        +Task~string~ PullRepositoryAsync(string)
        +Task~IEnumerable~(string, DateTimeOffset)~~ GetCommitsAsync(string, DateTime?)
        +Task~Dictionary~string, int~~ CountLinesInCommitAsync(string, string, IEnumerable~string~)
        +Task~IEnumerable~CommitStatsDto~~ GetCommitStatsAsync(string, DateTime?)
        +Task~long~ GetTotalLinesOfCodeAsync(string, IEnumerable~string~)
        +Task CheckConnectionAsync()
    }

    class IRepositoryDataService {
        <<interface>>
        +Task AddRepositoryAsync(GitHubRepository)
        +Task UpdateRepositoryAsync(GitHubRepository)
        +Task~GitHubRepository?~ GetRepositoryByIdAsync(Guid)
        +Task~GitHubRepository?~ GetRepositoryByOwnerAndNameAsync(string, string)
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task AddCommitLineCountAsync(CommitLineCount)
        +Task~IEnumerable~CommitLineCount~~ GetCommitLineCountsByRepositoryIdAsync(Guid)
        +Task~bool~ CommitExistsAsync(Guid, string)
        +Task DeleteCommitLineCountsForRepositoryAsync(Guid)
        +Task CheckConnectionAsync()
    }

    class IRepositoryService {
        <<interface>>
        +Task~IEnumerable~GitHubRepository~~ GetAllRepositoriesAsync()
        +Task~GitHubRepoStatsDto?~ GetRepositoryByOwnerAndNameAsync(string, string)
        +Task~GitHubRepository~ AddRepositoryAsync(string, string, string)
        +Task AnalyzeRepositoryCommitsAsync(Guid)
        +Task UpdateRepositoryAsync(GitHubRepository)
        +Task~IEnumerable~CommitLineCount~~ GetLineCountsForRepositoryAsync(Guid)
        +Task~IEnumerable~DailyLineCountDto~~ GetLineCountHistoryAsync(Guid, int)
        +Task~IEnumerable~RepositoryLineCountHistoryDto~~ GetAllRepositoriesLineCountHistoryAsync(int)
        +Task~IEnumerable~string~~ GetConfiguredFileExtensionsAsync()
    }

    %% Relationships
    GitHubRepository ||--o{ CommitLineCount : "has many commits"
    CommitLineCount ||--|| CommitStatsDto : "maps to"
    GitHubRepository ||--|| GitHubRepoStatsDto : "aggregated in"
    GitHubRepoStatsDto ||--o{ CommitLineCount : "contains"
    RepositoryLineCountHistoryDto ||--o{ DailyLineCountDto : "contains"
    DailyLineCountDto ||--o{ CommitLineCount : "aggregated from"
    
    %% Infrastructure Mappings
    GitHubRepository ||--|| GitHubRepositoryEntity : "persisted as"
    CommitLineCount ||--|| CommitLineCountEntity : "persisted as"
    
    %% Client State
    RepositoryPageState ||--o{ GitHubRepository : "manages"
    RepositoryAnalysisResult ||--o{ CommitLineCount : "contains"

    %% Service Dependencies
    IGitHubService ..> CommitStatsDto : "creates"
    IGitHubService ..> GitHubRepository : "operates on"
    IRepositoryDataService ..> GitHubRepository : "persists"
    IRepositoryDataService ..> CommitLineCount : "persists"
    IRepositoryService ..> GitHubRepository : "manages"
    IRepositoryService ..> CommitLineCount : "analyzes"
    IRepositoryService ..> DailyLineCountDto : "aggregates"
    IRepositoryService ..> GitHubRepoStatsDto : "creates"
    IRepositoryService ..> RepositoryLineCountHistoryDto : "creates"

    %% Styling
    classDef domainModel fill:#ffebee,stroke:#c62828,stroke-width:2px
    classDef applicationDto fill:#fff3e0,stroke:#e65100,stroke-width:2px
    classDef infrastructureEntity fill:#f1f8e9,stroke:#33691e,stroke-width:2px
    classDef clientModel fill:#f3e5f5,stroke:#4a148c,stroke-width:2px
    classDef serviceInterface fill:#e3f2fd,stroke:#0d47a1,stroke-width:2px

    class GitHubRepository,CommitLineCount domainModel
    class CommitStatsDto,DailyLineCountDto,GitHubRepoStatsDto,RepositoryLineCountHistoryDto applicationDto
    class GitHubRepositoryEntity,CommitLineCountEntity infrastructureEntity
    class RepositoryPageState,RepositoryAnalysisResult clientModel
    class IGitHubService,IRepositoryDataService,IRepositoryService serviceInterface
